@@ -1,0 +1,16 @@
+r
+r
+d
+r
+a
+r
+r
+launch
+a
+l
+a
+l
+a
+take off pajamas
+put on all
+quit
