@@ -1,0 +1,97 @@
+Version 4.2, fall 1984.
+First Adventure game written by His Lordship, the honorable
+Admiral D.W. Riggle
+
+
+	This is a luxurious stateroom.
+The floor is carpeted with a soft animal fur and the great wooden furniture
+is inlaid with strips of platinum and gold.  Electronic equipment built
+into the walls and ceiling is flashing wildly.  The floor shudders and
+the sounds of dull explosions rumble though the room.  From a window in
+the wall ahead comes a view of darkest space.  There is a small adjoining
+room behind you, and a doorway right.
+
+>-: 
+	These are the executive suites of the battlestar.
+Luxurious staterooms carpeted with crushed velvet and adorned with beaten
+gold open onto this parlor. A wide staircase with ivory banisters leads
+up or down. This parlor leads into a hallway left. The bridal suite is
+right. Other rooms lie ahead and behind you.
+
+>-: 
+	You are in what was once an elegant stateroom.
+Whoever lived in this stateroom, he and his female companion
+were mercilessly slain in their sleep. Clothes, trinkets and personal
+belongings are scattered all across the floor. Through a hole in the
+collapsed floor I can see a hallway below.  A door is behind you.
+
+There is a strange golden amulet on the floor here.
+>-: 
+	The hallway is very congested with rubble here.
+It is too choked with broken steel girders and other debris to continue
+on much farther. Above, the ceiling has caved in and it is possible to 
+climb up. There is not much chance to go back, ahead, or left.
+But the hallway seems clearer right.
+
+There are a few coins here.
+>-: 
+	You are in a wide hallway leading to the main hangar.
+The walls and ceiling here have been blasted through in several places.
+It looks as if quite a battle has been fought for possession of the landing bay
+Gaping corpses litter the floor.  The hallway continues behind you.
+The main hangar is ahead.
+
+>-: 
+	You are in the main hangar.
+This is a huge bay where many fighters and cargo craft lie.  Alarms are 
+sounding and fighter pilots are running to their ships.  Above is a gallery
+overlooking the bay. The scream of turbo engines is coming from right. The rest
+of the hangar is left. There is an exit behind you.
+
+>-: 
+	This is the launch room.
+From the launch tubes here fighters blast off into space. Only one is left,
+and it is guarded by two fierce men. A staircase leads up from here.
+There is a cluttered workbench ahead. From the main hangar come sounds of great
+explosions.  The main hangar is behind you. The viper launch tubes are right.
+
+>-: 
+	You are in the viper launch tube.
+The two guards are eyeing you warily! 
+
+There is a Viper ready for launch here.
+>-: You climb into the viper and prepare for launch.
+With a touch of your thumb the turbo engines ignite, thrusting you back into
+your seat.
+
+	You are in space.
+
+
+>-: 
+	You are in space.
+
+
+>-: 
+	You are in space.
+
+
+>-: 
+	You are in space.
+
+
+>-: 
+	You are in space.
+
+
+>-: 
+	You are in space.
+
+
+You are flying through an asteroid field!
+>-: pajamas:
+Taken.
+pajamas:
+Dropped.
+>-: You aren't holding a blaster.
+>-: bye.
+Your rating was novice.
